# rvmsharp

./: .csharpierrc.yaml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Copyright.md  Directory.Packages.props  Dockerfile  LICENSE  PULL_REQUEST_TEMPLATE.md  Program.cs  README.md  SCAFFOLDING.md  SECURITY.md  ThirdPartyLicenses.md  cadrevealprovider.sln  catalog-info.yaml  rvmsharp.csproj  rvmsharp.sln  rvmsharp.sln.DotSettings  scaffolding-pipeline.md
.config/: dotnet-tools.json
.github/workflows/: secret-scanning.yaml  validate.yaml
Backup/: rvmsharp.sln
CadRevealAutomation/: CadRevealAutomation.csproj  ConvertF3dToJsonCmdlet.cs  ConvertI3dToJsonCmdlet.cs  ConvertObjToCtmCmdlet.cs  ConvertRvmToObjCmdlet.cs  ConvertRvmToRevealModelCmdlet.cs  ExeWrapperCmdlet.cs  ExportFacetGroupsCmdlet.cs  README.md
CadRevealAutomation/Properties/: launchSettings.json
CadRevealComposer/: CadInfoNode.cs  CadNode.cs  CadRevealComposer.cs  CadRevealComposer.csproj  CadRevealComposerRunner.cs  CadRevealNode.cs  LinqExtensions.cs  ModelMetadata.cs  NodeIdProvider.cs  NodeNameFiltering.cs  Options.cs  Program.cs  Scene.cs  SceneCreator.cs  TreeIndexGenerator.cs
CadRevealComposer.Benchmarks/: CadRevealComposer.Benchmarks.csproj  CadRevealComposerRunnerBenchmarks.cs  Program.cs  benchmark_results.md
CadRevealComposer.Exe/: CadRevealComposer.Exe.csproj  CommandLineOptions.cs  Options.cs  Program.cs  README.md
CadRevealComposer.Tests/: BoundingBoxTests.cs  BoxCadRevealPrimitiveTests.cs  CadRevealComposer.Tests.csproj  FacetGroupMatchTests.cs  NodeIdProviderTests.cs  ProgramTests.cs  RotationTests.cs  SequentialIdGeneratorTests.cs  SequentialIdProviderTests.cs
CadRevealComposerTests/: BoxCadRevealPrimitiveTests.cs  ProgramTests.cs  UnitTest1.cs
CadRevealFbxProvider/: CadRevealFbxProvider.csproj  FbxImporter.cs  FbxMaterialWrapper.cs  FbxMeshWrapper.cs  FbxNode.cs  FbxNodeToCadRevealNodeConverter.cs  FbxNodeWrapper.cs  FbxProvider.cs  FbxSdkWrapper.cs  FbxTransformConverter.cs  UserFriendlyLoggerExceptionHandler.cs
CadRevealFbxProvider.Benchmarks/: CadRevealFbxProvider.Benchmarks.csproj  LoadFbxFileBenchmark.cs  Program.cs
CadRevealFbxProvider.Tests/: CadRevealFbxProvider.Tests.csproj  FbxNodeToCadRevealNodeConverterTests.cs  FbxProviderAttributeParserTests.cs  FbxProviderTests.cs  HelperFunctions.cs  ObjExporter.cs
CadRevealObjProvider/: CadRevealObjProvider.csproj  ObjProvider.cs  ObjProvider2.cs
CadRevealObjProvider.Tests/: CadRevealObjProvider.Tests.csproj  ObjProviderTests.cs  UnitTest1.cs
CadRevealRvmProvider/: CadRevealRvmProvider.csproj  FailedPrimitivesLogObject.cs  ProtoMeshFromRvmPyramid.cs  RvmBoundingBoxExtensions.cs  RvmFacetGroupMatcher.cs  RvmNodeToCadRevealNodeConverter.cs  RvmPrimitiveToAPrimitive.cs  RvmProtoMesh.cs  RvmProvider.cs  RvmPyramidInstancer.cs  RvmPyramidMatcher.cs  RvmStoreToCadRevealNodesConverter.cs  RvmStoreToCadRevealNodesConverterWithOyramidsTemp.cs
CadRevealRvmProvider.Tests/: CadRevealRvmProvider.Tests.csproj  RvmProviderTests.cs  RvmPyramidInstancerTests.cs  RvmPyramidMatcherTests.cs  UnitTest1.cs
Commons/: BenStringInternPool.cs  Commons.csproj  IStringInternPool.cs
Commons.Tests/: Commons.Tests.csproj  SagittaUtilsTests.cs
HierarchyComposer/: HierarchyComposer.csproj  HierarchyContext.cs  MOPTimer.cs  Program.cs
HierarchyComposer.Tests/: DatabaseComposerTests.cs  HierarchyComposer.Tests.csproj  RefNoTests.cs
Rvm/: RvmAttributeParser.cs  RvmColor.cs  RvmGroup.cs  RvmModel.cs  RvmParser.cs  RvmPrimitive.cs  RvmPrimitiveKind.cs  RvmStore.cs
RvmSharp/: CompilerServices.cs  IStringInternPool.cs  PdmsTextParser.cs  README.md  Range.cs  RvmAttributeParser.cs  RvmParser.cs  RvmReadOptions.cs  RvmSharp.csproj
RvmSharp.Exe/: BenPoolWrapper.cs  Options.cs  Program.cs  RvmSharp.Exe.csproj
RvmSharp.Tests/: MeshTests.cs  ObjExporterTests.cs  PdmsTextParserTests.cs  RvmAttributeParserTests.cs  RvmParserTests.cs  RvmSharp.Tests.csproj  TestFileHelpers.cs  UnitTest1.cs
StringInternPool/: IStringInternPool.cs  StringInternPool.csproj
TagMappingTemp.Tests/: TagMappingTemp.Tests.csproj
Tessellator/: Mesh.cs  ObjExporter.cs  RvmAlign.cs  TessNet.cs  TessellatorBridge.cs
autobuild/: azure-pipelines.yml  azuredevops.publish.yaml  azuredevops.pullreview.yaml  secrets-scanning.yaml
docker/: README.md  ci.publish.Dockerfile  ci.pullreview.Dockerfile
fbximport/: .dockerignore  .editorconfig  .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  README.md  benchmarks.txt  build-linux.ps1  fbx.cmake  vcpkg.json
fbximport/cmake/: catch2.cmake  fbx.cmake
fbximport/data/: cube.fbx
fbximport/src/: CMakeLists.txt  common.h  importer.cpp  importer.h  main.cpp  manager.cpp  manager.h  material.cpp  material.h  mesh.cpp  mesh.h  node.cpp  node.h
fbximport/tests/: CMakeLists.txt  fbx_info.cpp  fbx_info.h  main.cpp  tests.cpp  tests.h
fbximport/tests/data/: cube.fbx
libs/tessbridge/: CMakeLists.txt
libs/tessbridge/include/: tessbridge.h
libs/tessbridge/src/: tessbridge.cpp
scripts/: Convert-RvmToI3df-Params.ps1  Convert-RvmToI3df.ps1  Convert-ScaffoldingToReveal.ps1
spikes/: 2023-05-23-GroupNodesToMakeSectorsLessOblong.md  2023-05-23-LODSystemWithoutForking.md  2023-05-24-ConvertInstanceMeshesWhenTooFewInASector  2023-05-24-ConvertInstanceMeshesWhenTooFewInASector.md  2023-05-30-PrioritizedNodes.md  2023-05-30-ShadowLowPolySectors.md  2023-06-01-ConvertPrimitivesWhenTooFewInASector.md  2023-11-22-SplitOnArea.md  2023-11-27-KeepOctreeShape  2023-11-27-KeepOctreeShape.md  2023-12-01-SplitOnAreaWithOutlierhandling.md  2023-12-08-OctreeSplitWithFlatFinish  2023-12-11-MakeSectorsCubic.md  2023-12-20-NotOctreeSplitting  2023-12-20-NotOctreeSplitting.md  2024-02-19-EMHI_PicturesWithPlaywright.md  2024-04-02-NodeOrderWeighting.md  2024-06-07-OptimizeScaffoldGeometry.md  2024-07-09-HighlightSectors.md  230523-GroupNodesToMakeSectorsLessOblong.md  230523-LODSystemWithoutForking.md  SplitOnArea.md  yyyy-mm-dd-SpikeReportTemplate.md
tools/: README.md
(+692 files in other folders)
